[package]
name = "schadsoftware"
version = "0.1.0"
authors = ["florian"]
edition = "2018"

[dependencies]
ndless = { git = 'https://github.com/pranshuthegamer/ndless-rs.git' }
ndless-handler = { git = 'https://github.com/pranshuthegamer/ndless-rs.git' }
ndless-sdl = "0.2.0"
rand = {version = "0.8.5", features = ["small_rng"], default-features = false}

[package.metadata.zehn]
name = "schadsoftware"
compress = true
notice = "Auto generated with cargo-generate"
flags = "--240x320-support true --uses-lcd-blit true"

[profile.release]
lto = true
codegen-units = 1