[package]
name = "n_snake"
version = "1.0.0"
authors = ["Florian Schmidt"]
edition = "2021"

[dependencies]
ndless = { git = 'https://github.com/jacobk999/ndless-rs.git' }
ndless-handler = { git = 'https://github.com/jacobk999/ndless-rs.git' }
ndless-sdl = { git = 'https://github.com/jacobk999/ndless-rs.git' }
rand = {version = "0.8.5", features = ["small_rng"], default-features = false}

[package.metadata.zehn]
name = "nSnake"
compress = true
notice = "Snake for ndless"
flags = "--240x320-support true --uses-lcd-blit true"

[profile.release]
lto = true
codegen-units = 1